# Sentinel

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/analysis-engine/: Dockerfile  pyproject.toml  worker.py
apps/analysis-engine/analyzer/: ast_parser.py  churn.py  complexity.py  health_scorer.py  neo4j_writer.py  reporter.py
apps/api-gateway/: Dockerfile  package.json
apps/api-gateway/src/: index.ts
apps/api-gateway/src/plugins/: jwt.ts  redis.ts
apps/api-gateway/src/routes/: ws.ts
apps/auth-service/: Dockerfile  package.json
apps/auth-service/src/: index.ts
apps/auth-service/src/plugins/: db.ts  jwt.ts
apps/auth-service/src/routes/: auth.ts  github-oauth.ts  orgs.ts  repos.ts
apps/frontend/: Dockerfile  nginx.conf  package.json  tailwind.config.js  vite.config.ts
apps/frontend/src/: config.ts  index.css  main.tsx
apps/frontend/src/components/: AgentFindings.tsx  AnimatedBackground.tsx  AuthProvider.tsx  DashboardLayout.tsx  DependencyGraph.tsx  ErrorBoundary.tsx  FileScoresTable.tsx  JobTracker.tsx  PageTransition.tsx  ScoreRing.tsx
apps/frontend/src/lib/: api.ts  cache.ts
apps/frontend/src/pages/: Login.tsx  NotFound.tsx  RepoDashboard.tsx  ReposList.tsx
apps/ingestion-service/: Dockerfile  package.json
apps/ingestion-service/src/: index.ts  rabbitmq.ts
apps/orchestrator/: Dockerfile  package.json
apps/orchestrator/src/: handlers.ts  index.ts  rabbitmq.ts
docs/adr/: ADR-0001-repo-analysis-job-contract.md
infra/: docker-compose.yml  prometheus.yml
(+4 files in other folders)
