[project]
name = "analysis-engine"
version = "0.2.0"
description = "Sentinel AI analysis engine — AST parsing, graph construction, health scoring"
requires-python = ">=3.12"
dependencies = [
    # Message queue
    "pika>=1.3.2",
    # Environment
    "python-dotenv>=1.0.1",
    # HTTP client — POST results back to orchestrator
    "requests>=2.32.3",
    # Git history analysis
    "gitpython>=3.1.43",
    # Graph database
    "neo4j>=5.21.0",
    # Tree-Sitter core + language grammars
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    # Structured logging
    "structlog>=24.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analyzer"]
